# RedKeepers

./: .gitignore  AGENTS.md  README.md  run-daemon.bat
Human/: 2026-02-26-world-map-feature-brief.md  README.md
backend/: README.md
client-android-capacitor/: README.md  capacitor.config.ts  package.json
client-steam-tauri/: README.md  package.json
client-steam-tauri/src-tauri/: Cargo.toml  tauri.conf.json
client-steam-tauri/src-tauri/src/: main.rs
client-web/: app.js  first-slice-bootstrap-payload.js  first-slice-manifest-snapshot.js  hero-wireframes.css  hero-wireframes.html  index.html  release-metadata.placeholder.json  styles.css
infra/: docker-compose.yml
scripts/: bootstrap_repo.ps1  docker-dev-down.ps1  docker-dev-up.ps1  generate_rk_m0_0014_progression_profile.ps1  package_android_capacitor_wrapper.ps1  package_steam_tauri_wrapper.ps1  package_web_vertical_slice.ps1  prepare_android_capacitor_wrapper.ps1  prepare_steam_tauri_wrapper.ps1  run_android_capacitor_wrapper_dev.ps1  run_daemon.ps1  run_steam_tauri_wrapper_dev.ps1  smoke_web_vertical_slice.ps1  sync_android_capacitor_wrapper.ps1  wrapper_android_capacitor.ps1  wrapper_steam_tauri.ps1
tests/: test_blocked_archive.py  test_blocked_revisit.py  test_codex_preflight.py  test_completion_metrics.py  test_daemon_smoke_env.py  test_first_slice_release_gate_runner.py  test_frontend_visual_blocked_outcome.py  test_frontend_visual_smoke.py  test_frontend_visual_status_blocked_detection.py  test_frontend_visual_validation.py  test_generate_first_slice_frontend_manifest_snapshot.py  test_human_inbox.py  (+25 more)
(+377 files in other folders)
