[package]
name = "redkeepers_steam_tauri_wrapper"
version = "0.1.0"
description = "Temporary Tauri wrapper scaffold for RedKeepers Steam vertical slice packaging."
authors = ["RedKeepers Platform Lane"]
license = "UNLICENSED"
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
